@@ -1,4 +1,9 @@
 2006-02-10  Alex Roitman  <shura@gramps-project.org>
+	* src/plugins/DetDescendantReport.py
+	(DetDescendantReport.write_endnotes): Disable writing reference
+	details.
+	* src/plugins/DetAncestralReport.py
+	(DetAncestorReport.write_endnotes): Disable writing reference details.
 	* src/docgen/ODFDoc.py: Typo.
 
 2006-02-09  Alex Roitman  <shura@gramps-project.org>
